# browser-controller

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  changelog  cliff-debian.toml  cliff.toml  clippy.toml  deny.toml  package-extension.sh  release.sh
.config/: nextest.toml
.github/workflows/: github-release.yaml
addons.mozilla.org/: submission_form_content.md
browser-controller-cli/: CHANGELOG.md  Cargo.toml  README.md  changelog  cliff-debian.toml  cliff.toml
browser-controller-cli/src/: main.rs
browser-controller-client/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
browser-controller-client/src/: client.rs  discovery.rs  error.rs  event_stream.rs  lib.rs  manifest.rs  matchers.rs  rdp.rs  url_util.rs
browser-controller-integration-tests/: CHANGELOG.md  Cargo.toml  cliff.toml
browser-controller-integration-tests/src/: bidi.rs  browser.rs  chrome_for_testing.rs  cli.rs  driver.rs  harness.rs  lib.rs  mediator.rs  niri.rs  profile.rs  test_server.rs
browser-controller-integration-tests/tests/: auth.rs  cli_e2e.rs  containers.rs  downloads.rs  event_stream_filter.rs  events.rs  idempotent_open.rs  instances.rs  navigation.rs  smoke.rs  tab_groups.rs  tab_matching.rs  tab_open_flags.rs  tab_operations.rs  tabs.rs  timeout.rs  window_matching.rs  windows.rs
browser-controller-mediator/: CHANGELOG.md  Cargo.toml  README.md  changelog  cliff-debian.toml  cliff.toml
browser-controller-mediator/src/: main.rs
browser-controller-types/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
browser-controller-types/src/: lib.rs
chrome.google.com/: submission_form_content.md
cli/: Cargo.toml
cli/src/: main.rs
extension/: background.js  manifest.chrome.json  manifest.json  offscreen.html  offscreen.js
mediator/: Cargo.toml  changelog
mediator/src/: main.rs
rpm/centos7/: browser-controller.spec
types/: Cargo.toml
types/src/: lib.rs
