[package]
name = "browser-controller-integration-tests"
description = "Integration tests for the browser-controller system"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license = "GPL-3.0-or-later"
publish = false

[dependencies]
browser-controller-client = { workspace = true }
browser-controller-types = { path = "../browser-controller-types" }
fs-err = { workspace = true }
futures = "0.3"
niri-ipc = "=25.11.0"
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
webdriverbidi = "0.2.2"
which = "7"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
