[package]
name = "browser-controller-types"
description = "Shared protocol types for browser-controller CLI and mediator"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["browser", "automation", "native-messaging", "firefox", "chrome"]
categories = ["data-structures"]
exclude = [".env", "cliff.toml", "tarpaulin-report.html", "tarpaulin-report.json"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
