[package]
name = "browser-controller-types"
description = "Shared protocol types for browser-controller CLI and mediator"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
repository.workspace = true
keywords = ["automation", "browser"]
categories = ["command-line-utilities"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
